--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,13 @@
 {
   "env": {
-    "browser": true,
-    "es2021": true
+    "jest/globals": true,
+    "node": true,
+    "es6": true
   },
-  "extends": [
-    "airbnb-base"
-  ],
+  "plugins": ["node", "jest"],
+  "extends": [ ],
   "parserOptions": {
-    "ecmaVersion": 12,
+    "ecmaVersion": 2018,
     "sourceType": "module"
   },
   "rules": {
