--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     "es6": true
   },
   "plugins": ["node", "jest"],
-  "extends": [ ],
+  "extends": [ "airbnb" ],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
