--- a/package.json
+++ b/package.json
@@ -4,22 +4,35 @@
   "description": "PVOC in JS",
   "main": "index.js",
   "scripts": {
+    "_pretest": "eslint src/**/*.js --ignore-pattern \"node_modules\"",
     "test": "jest --runInBand --verbose",
     "build": "babel ./src -d dist",
     "lint": "eslint src/**/*.js --ignore-pattern \"node_modules\""
   },
   "author": "Jon Moniaci",
   "license": "ISC",
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./test/setupTests.js"
+    ]
+  },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.1",
-    "eslint": "^7.13.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "regenerator-runtime": "^0.13.7"
   }
 }
