AIFF can parse through all SSND, COMM and FORM chunks and read chunk headers.

--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "jest-cli": "^26.6.3",
     "prettier": "^2.1.2",
     "regenerator-runtime": "^0.13.7"
+  },
+  "dependencies": {
+    "float80": "^1.1.0"
   }
 }
