--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "regenerator-runtime": "^0.13.7"
   },
   "dependencies": {
+    "bessel": "^1.0.2",
     "fast-memoize": "^2.5.2",
     "float80": "^1.1.0"
   }
