--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-  "presets": ["@babel/preset-env"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "usage", // alternative mode: "entry"
+        "corejs": 3, // default would be 2
+        "targets": "> 0.25%, not dead"
+      }
+    ]
+  ]
 }
