--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "babel ./src -d dist",
     "lint": "eslint src/**/*.js --ignore-pattern \"node_modules\""
   },
+  "bin": {
+    "pvoc": "./bin/cli.js"
+  },
   "author": "Jon Moniaci",
   "license": "ISC",
   "jest": {
@@ -20,7 +23,7 @@
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.6",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-env": "^7.12.10",
     "babel-jest": "^26.6.3",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -37,6 +40,7 @@
   },
   "dependencies": {
     "bessel": "^1.0.2",
+    "core-js": "^3.8.1",
     "fast-memoize": "^2.5.2",
     "float80": "^1.1.0"
   }
