--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bessel": "^1.0.2",
     "core-js": "^3.8.1",
     "fast-memoize": "^2.5.2",
-    "float80": "^1.1.0"
+    "float80": "^1.1.0",
+    "yargs": "^16.2.0"
   }
 }
